--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,9 @@ body{
 .navbar-brand{
     padding: 0px;
 }
-
+.navbar-nav>li>a{
+    font-weight: 700;
+}
 /******** Form Control Override*******************/
 .form-control{
     padding: 3px 6px;
