--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700,700italic");
+//@import url("https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700,700italic");
 body{
     background:  #F5F5F5;
     font-family: 'Noto Sans';
