--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-//@import url("https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700,700italic");
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700,700italic");
 body{
     background:  #F5F5F5;
     font-family: 'Noto Sans';
@@ -148,4 +148,13 @@ h1,h2,h3,h4,h5,h6{
 }
 .signin{
     opacity: 0.8;
+}
+
+/******************************************/
+.default{
+    color: #fff;
+}
+
+ul{
+    list-style-type: none;
 }
