--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,3 +158,8 @@ h1,h2,h3,h4,h5,h6{
 ul{
     list-style-type: none;
 }
+
+/************** Grids Override****************/
+.zeroleftpadding{
+    padding-left: 0;
+}
